# TK_MOTOR_IGH

./: .gitignore  README.md  README_1.md  dc.d  dc.h  ethercat_igh_sv630_demo.c  example  igh_example.c  igh_example.d  igh_example.h  igh_example.pro  motion.c  motion.d  motion.h  pdo_set.c  pdo_set.d  pdo_set.h  trajectory_planning.c  trajectory_planning.d  trajectory_planning.h  软件流程图.md
.qtcreator/: igh_example.pro.user.a021b06
ros2_ws/: cst_toggle copy.sh  cst_toggle.sh  standalone_vs_ros2_mode4_差异说明.md  原点数据
ros2_ws/src/arm_control/: package.xml
ros2_ws/src/arm_control/msg/: ArmCmd.msg  ArmState.msg  LowCmd.msg  LowState.msg  MotorCmd.msg  MotorState.msg
ros2_ws/src/igh_ethercat/: package.xml
ros2_ws/src/igh_ethercat/include/: igh_example.h  motion.h
ros2_ws/src/igh_ethercat/src/: dc.c  igh_ethercat_node.cpp  igh_example.c  motion.c  pdo_set.c
scripts/: install_ethercat.sh  uninstall_ethercat.sh
